--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Artificient GPS Tracking</string>
+
+    <string name="screen_name_tracking">Tracking</string>
+    <string name="screen_name_trip_history">Trip History</string>
+    <string name="screen_name_settings">Settings</string>
 </resources>
